--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "ugd_bloc",
-    "short_name": "ugd_bloc",
+    "name": "ugd6_1217",
+    "short_name": "ugd6_1217",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
