--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "ugd_bloc" "\0"
+            VALUE "FileDescription", "ugd6_1217" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "ugd_bloc" "\0"
+            VALUE "InternalName", "ugd6_1217" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "ugd_bloc.exe" "\0"
-            VALUE "ProductName", "ugd_bloc" "\0"
+            VALUE "OriginalFilename", "ugd6_1217.exe" "\0"
+            VALUE "ProductName", "ugd6_1217" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
