--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,15 @@ environment:
   sdk: '>=3.1.0 <4.0.0'
 
 dependencies:
+  camera: ^0.10.5+5
+  cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
   shared_preferences: ^2.0.11
+  mobile_scanner: ^3.5.1
+  path: any
+  path_provider: ^2.1.1
+  qr_flutter: ^4.1.0
 
   sqflite: ^2.2.6
   flutter_slidable: ^0.6.0
