--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   path: any
   path_provider: ^2.1.1
   qr_flutter: ^4.1.0
+  flutter_local_notifications:
 
   sqflite: ^2.2.6
   flutter_slidable: ^0.6.0
