--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
 
 dependencies:
   camera: ^0.10.5+5
+  sensors_plus: ^3.1.0
+  maps_launcher: ^2.2.0
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
