--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,13 @@ dependencies:
   path_provider: ^2.1.1
   qr_flutter: ^4.1.0
   flutter_local_notifications:
+  barcode_widget: ^2.0.4
+  image_picker: ^1.0.4
+  intl: ^0.18.1
+  pdf: ^3.10.5
+  printing: ^5.11.1
+  responsive_sizer: ^3.2.0
+  uuid: ^4.1.0
 
   sqflite: ^2.2.6
   flutter_slidable: ^0.6.0
