Coba Tambah imagePicker(Masih error)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,42 +1,40 @@
 name: ugd6_1217
 description: A new Flutter project.
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.1.0 <4.0.0'
+  sdk: ">=3.1.0 <4.0.0"
 
 dependencies:
+  barcode_widget: ^2.0.4
   camera: ^0.10.5+5
-  sensors_plus: ^3.1.0
-  maps_launcher: ^2.2.0
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
-  shared_preferences: ^2.0.11
+  flutter_local_notifications: null
+  flutter_slidable: ^0.6.0
+  image_picker: ^1.0.4
+  intl: ^0.18.1
+  maps_launcher: ^2.2.0
   mobile_scanner: ^3.5.1
   path: any
   path_provider: ^2.1.1
-  qr_flutter: ^4.1.0
-  flutter_local_notifications:
-  barcode_widget: ^2.0.4
-  image_picker: ^1.0.4
-  intl: ^0.18.1
   pdf: ^3.10.5
   printing: ^5.11.1
+  qr_flutter: ^4.1.0
   responsive_sizer: ^3.2.0
+  sensors_plus: ^3.1.0
+  shared_preferences: ^2.0.11
+  sqflite: ^2.2.6
   uuid: ^4.1.0
 
-  sqflite: ^2.2.6
-  flutter_slidable: ^0.6.0
-
 dev_dependencies:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
   assets:
     - images/
-
