--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_local_notifications: null
+  flutter_riverpod: ^2.4.8
   flutter_slidable: ^0.6.0
+  http: ^1.1.0
   image_picker: ^1.0.4
   intl: ^0.18.1
   maps_launcher: ^2.2.0
