--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,7 +22,13 @@ if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
 
-android {
+def keystoreProperties = new Properties()
+    def keystorePropertiesFile = rootProject.file('key.properties')
+    if(keystorePropertiesFile.exists()){
+        keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+    }
+
+    android {
     namespace "com.example.ugd_api_1"
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
@@ -51,6 +57,15 @@ android {
         versionName flutterVersionName
     }
 
+    signingConfigs{
+        release {
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+            storePassword keystoreProperties['storePassword']
+        }
+    }
+
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
@@ -58,7 +73,7 @@ android {
             signingConfig signingConfigs.debug
         }
     }
-}
+    }
 
 flutter {
     source '../..'
