--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,18 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  msix: ^3.16.7
+
+msix_config:
+  display_name: ditonton
+  publisher_display_name: david company
+  identity_name: com.david.ditonton
+  logo_path: c:\Users\David Wisnu\Documents\Kuliah\Semester 5\Pemrograman Berbasis Platform\ic_launcher\1024.png
+  msix_version: 1.0.0.0
+  capabilities: internetClient
 
 flutter:
   uses-material-design: true
   assets:
     - images/
+
